--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div>
 	<nav>
+	<h3 align="left"><a href="/">Glen Martin</a></h3>
 	<ul>
 		<li><a href="/projects">Projects</a></li>
 	    <li><a href="/cv">CV</a></li>
 	    <li><a href="/blog">Blog</a></li>
 	</ul>
-	<h3><a href="/">Glen Martin</a></h3>
 	</nav>
 </div> 
