--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div>
 	<nav>
-	<h3 align="left"><a href="/">Glen Martin</a></h3>
 	<ul>
+		<li><h2><a href="/">Glen Martin</a></h2></li>
 		<li><a href="/projects">Projects</a></li>
 	    <li><a href="/cv">CV</a></li>
 	    <li><a href="/blog">Blog</a></li>
