--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,21 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+h1 {
+    font-size: 3em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+}
+h2 {
+    font-size: 2em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+	text-align: left;
+}
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
-	align: right;
+	text-align: right;
 }
 nav ul li, footer ul li {
     display: inline;
@@ -19,10 +28,6 @@ a {
 }
 a:hover {
     text-decoration: underline;
-}
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
     font-size: 1.5em;
