--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,13 @@ footer {
     font-size: .8em;
 }
 
+.header {
+	padding: 60px;
+	background: #1abc9c;
+	color: white;
+	font-size: 30px;
+}
+
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
