--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,6 @@
 	
 	<title>{{ page.title }} | Glen Martin | Lecturer in Health Data Science.</title>		
 	<!-- styles -->
-	<link rel="stylesheet" type="text/css" href="/css/main.css">
+	<link rel="stylesheet" href="/css/main.css">
 	
 </head>
