--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 <div class="header">
 	<nav>
 	<ul>
-		<li><h2 align="left"><a href="/">Glen Martin</a></h2></li>
-		<li><a href="/projects">Projects</a></li>
-	    <li><a href="/cv">CV</a></li>
-	    <li><a href="/blog">Blog</a></li>
+		<li><h2 align="left"><a color="white" href="/">Glen Martin</a></h2></li>
+		<li><a color="white" href="/projects">Projects</a></li>
+	    <li><a color="white" href="/cv">CV</a></li>
+	    <li><a color="white" href="/blog">Blog</a></li>
 	</ul>
 	</nav>
 </div> 
