--- a/css/main.css
+++ b/css/main.css
@@ -11,10 +11,19 @@ h2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 	text-align: left;
 }
-
+nav ul, footer ul {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
+    list-style: none;
+    font-weight: bold;
+	text-align: right;
+}
+nav ul li, footer ul li {
+    display: inline;
+    margin-right: 20px;
+}
 a {
     text-decoration: none;
-    color: #999;
 }
 a:hover {
     text-decoration: underline;
