--- a/css/main.css
+++ b/css/main.css
@@ -22,34 +22,19 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
-a {
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
 }
-
 .header {
-	padding: 60px;
-	background: #1abc9c;
-	color: white;
-	font-size: 30px;
+	padding: 20px;
+	background: #71AFFF;
+	color: #FFFFFF;
 }
-
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
 }
-
 ul.posts li {
     list-style: none;
 }
