--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,15 @@
 		<body>
 			<div>
 			
-			{% include header.html %}
+			<div class="header">
+				<nav>
+				<ul>
+					<li><h2 align="left"><a href="/">Glen Martin</a></h2></li>
+					<li><a href="/projects">Projects</a></li>
+					<li><a href="/blog">Blog</a></li>
+				</ul>
+				</nav>
+			</div> 
 			
 			{{ content }}
 			
