--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 				<ul>
 					<li><h2 align="left"><a href="/">Glen Martin</a></h2></li>
 					<li><a href="/projects">Projects</a></li>
-					<li><a href="/blog">Blog</a></li>
+					<li><a href="/posts">Posts</a></li>
 				</ul>
 				</nav>
 			</div> 
