Update header bar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
 			<div class="header">
 				<nav>
 				<ul>
-					<li><h2 align="left"><a href="/">Glen Martin</a></h2></li>
-					<li><a href="/projects">Projects</a></li>
-					<li><a href="/posts">Posts</a></li>
+					<li><h2 align="left"><a href="/"><font color="#FFFFFF">Glen Martin</font></a></h2></li>
+					<li><a href="/projects"><font color="#FFFFFF">Projects</font></a></li>
+					<li><a href="/posts"><font color="#FFFFFF">Posts</font></a></li>
 				</ul>
 				</nav>
 			</div> 
