--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 	<html lang="en">
 		
-		{% include head.html %}
+		<meta charset="utf-8">
+		<meta name="viewport" width="device-width, initial-scale=1.0">
+		<meta name="description" content="{{ page.description }}">
+		<meta name="author" content="Glen Martin">
+	
+		<title>{{ page.title }} | Glen Martin | Lecturer in Health Data Science.</title>		
+		<!-- styles -->
+		<link rel="stylesheet" href="/css/main.css">
 		
 		<body>
 			<div>
