--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
     margin: 60px auto;
-    width: 70%;
+    width: 75%;
 	font-family:'Helvetica', 'Arial', 'Sans-Serif';
 	text-align: left;
 	font-size: 1em;
@@ -18,6 +18,7 @@ h2 {
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
+	text-align: left;
 }
 .header {
 	padding: 10px;
@@ -40,23 +41,3 @@ footer {
 }
 .left {float:left;width:50%;}
 .right {float:left;width:50%;}
-
-
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-	text-align: right;
-}
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-ul.posts li {
-    list-style: none;
-}
