--- a/css/main.css
+++ b/css/main.css
@@ -39,3 +39,22 @@ footer {
 }
 .left {float:left;width:50%;}
 .right {float:left;width:50%;}
+
+nav ul, footer ul {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
+    list-style: none;
+    font-weight: bold;
+	text-align: right;
+}
+nav ul li, footer ul li {
+    display: inline;
+    margin-right: 20px;
+}
+ul.posts { 
+    margin: 20px auto 40px; 
+    font-size: 1.5em;
+}
+ul.posts li {
+    list-style: none;
+}
