--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,8 @@
 			<div class="header">
 				<nav>
 				<ul>
-					<li><h2 align="left"><a href="/"><font color="#FFFFFF">Glen Martin</font></a></h2></li>
+					<h2 align="left">Glen Martin</h2>
+					<li><a href="/"><font color="#FFFFFF">Home</font></a></h2></li>
 					<li><a href="/projects"><font color="#FFFFFF">Projects</font></a></li>
 					<li><a href="/posts"><font color="#FFFFFF">Posts</font></a></li>
 				</ul>
