--- a/css/main.css
+++ b/css/main.css
@@ -27,18 +27,13 @@ footer {
 	margin-bottom: 16px;
 }
 .img-with-text {
-    text-align: justify;
+    text-align: centre;
     width: [width of img];
 }
 .img-with-text img {
     display: block;
     margin: 0 auto;
 }
-.iconDetails {
-	margin-left:2%;
-	float:left; 
-	border-radius: 50%;	
-} 
 .container2 {
     width:100%;
     height:auto;
