--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 	<html lang="en">
 		
 		<meta charset="utf-8">
-		<meta name="viewport" width="device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="{{ page.description }}">
 		<meta name="author" content="Glen Martin">
 	
