--- a/css/main.css
+++ b/css/main.css
@@ -28,14 +28,14 @@ footer {
 }
 img {
     display: block;
-    margin: 0 auto;
-	margin-left:2%;
-	margin-right:2%
+    margin: auto;
 	float: left;
+	max-width: 100%;
+    max-height: 100%;
 	border-radius: 50%;
 }
 .container2 {
-    width:100%;
+    width:auto;
     height:auto;
     padding:1%;
     float:left;
