--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
-    margin: 60px auto;
-    width: 75%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 	font-family:'Helvetica', 'Arial', 'Sans-Serif';
 	text-align: left;
 	font-size: 1em;
@@ -27,8 +28,9 @@ footer {
 	margin-bottom: 16px;
 }
 img {
+	padding: 0;
     display: block;
-    margin: auto;
+    margin: 0 auto;
 	float: left;
 	max-width: 100%;
     max-height: 100%;
