--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
     height: 100%;
     margin: 0;
@@ -36,14 +40,24 @@ img {
     max-height: 100%;
 	border-radius: 50%;
 }
-.container2 {
-    width:auto;
-    height:auto;
-    padding:1%;
-    float:left;
+/* Create two equal columns that floats next to each other */
+.column {
+	float: left;
+	width: 50%;
+	padding: 10px;
 }
-.left {float:left;width:auto;}
-.right {float:left;width:auto;}
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
 
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
