--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,9 @@
 * {
 	box-sizing: border-box;
 }
-
 body {
-    height: 100%;
-    margin: 0;
+    width: 75%;
+    margin: 0 auto;
     padding: 0;
 	font-family:'Helvetica', 'Arial', 'Sans-Serif';
 	text-align: left;
