--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ img {
     margin: 0 auto;
 	float: left;
 	border-radius: 50%;
+	max-width: 100%
 }
 /* Create two equal columns that floats next to each other */
 .column {
