--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,8 @@ footer {
 }
 img {
 	display: block;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 	float: left;
 	border-radius: 50%;
 	max-width: 100%
