--- a/css/main.css
+++ b/css/main.css
@@ -35,9 +35,8 @@ img {
 	display: block;
     margin-left: auto;
     margin-right: auto;
-	float: left;
 	border-radius: 50%;
-	max-width: 100%
+	width: 50%
 }
 /* Create two equal columns that floats next to each other */
 .column {
