--- a/css/main.css
+++ b/css/main.css
@@ -31,18 +31,18 @@ footer {
 	color: #FFFFFF;
 	margin-bottom: 16px;
 }
-img {
-	display: block;
-    margin-left: auto;
-    margin-right: auto;
-	border-radius: 50%;
-	width: 50%
-}
 /* Create two equal columns that floats next to each other */
 .column {
 	float: left;
 	width: 50%;
 	padding: 10px;
+}
+.column img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 50%; 
+	width: 50%;
 }
 /* Clear floats after the columns */
 .row:after {
