--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,8 @@ footer {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: auto;
+	margin-bottom: auto;
 	border-radius: 50%; 
 }
 /* Clear floats after the columns */
