Add publications page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 				<ul>
 					<h2 align="left">Glen Martin</h2>
 					<li><a href="/"><font color="#FFFFFF">Home</font></a></h2></li>
+					<li><a href="/publications"><font color="#FFFFFF">Publications</font></a></li>
 					<li><a href="/projects"><font color="#FFFFFF">Projects</font></a></li>
 					<li><a href="/posts"><font color="#FFFFFF">Posts</font></a></li>
 				</ul>
